# docs/openapi-mobile-template.yaml
@@ -1068,6 +1068,12 @@ components:
           type: integer
           minimum: 0
           maximum: 6
+        days_of_week:
+          type: array
+          items:
+            type: integer
+            minimum: 0
+            maximum: 6
         start_time:
           type: string
           example: "18:30:00"
@@ -1094,6 +1100,12 @@ components:
           type: integer
           minimum: 0
           maximum: 6
+        days_of_week:
+          type: array
+          items:
+            type: integer
+            minimum: 0
+            maximum: 6
         start_time:
           type: string
         end_time:
@@ -1123,6 +1135,10 @@ components:
           nullable: true
         day_of_week:
           type: integer
+        days_of_week:
+          type: array
+          items:
+            type: integer
         start_time:
           type: string
         end_time:
